fix(tr4): prevent dyn table padding distortion

--- a/tr4/assets/layout.css
+++ b/tr4/assets/layout.css
@@ -449,6 +449,7 @@
 
     .table.is-dyn {
       --tbl-min: 56px;
+      box-sizing: border-box;
       font-size: calc(var(--tbl-min) * 0.22);
       border-radius: calc(var(--tbl-min) * 0.18);
       padding: calc(var(--tbl-min) * 0.14) calc(var(--tbl-min) * 0.10) calc(var(--tbl-min) * 0.18);
